workshop-real/examples/force-app/main/default/objects/StoreVisit__c/StoreVisit__c.object-meta.xml
<CustomObject>
    <description>店舗訪問記録。営業担当者が店舗を訪問した際の記録を管理する。</description>
    <label>店舗訪問記録</label>
    <nameField>
        <displayFormat>SV-{YYYY}{MM}-{0000}</displayFormat>
        <label>訪問記録番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>店舗訪問記録</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>