workshop-real/examples/force-app/main/default/objects/StoreVisit__c/fields/NextAction__c.field-meta.xml
<CustomField>
    <fullName>NextAction__c</fullName>
    <description>次回の訪問で実施すべきアクション</description>
    <label>次回アクション</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>