workshop-real/examples/force-app/main/default/objects/StoreVisit__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>訪問の目的</description>
    <label>訪問目的</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>定期巡回</fullName>
                <default>true</default>
                <label>定期巡回</label>
            </value>
            <value>
                <fullName>新商品案内</fullName>
            </value>
            <value>
                <fullName>クレーム対応</fullName>
            </value>
            <value>
                <fullName>棚割り変更</fullName>
            </value>
            <value>
                <fullName>キャンペーン設置</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>