workshop-real/examples/force-app/main/default/objects/StoreVisit__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>訪問の総合評価（1〜5）</description>
    <label>評価</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>