workshop-real/examples/force-app/main/default/objects/StoreVisit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>訪問記録のステータス</description>
    <label>ステータス</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>下書き</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <label>提出済み</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>承認済み</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>差し戻し</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>