workshop-real/examples/force-app/main/default/objects/StoreVisit__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>訪問先の店舗</description>
    <label>店舗</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>訪問記録</relationshipLabel>
    <relationshipName>StoreVisits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>