workshop-real/examples/force-app/main/default/objects/StoreVisit__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>訪問の概要・所感</description>
    <label>訪問概要</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>