workshop-real/examples/force-app/main/default/objects/StoreVisit__c/fields/VisitDate__c.field-meta.xml
<CustomField>
    <fullName>VisitDate__c</fullName>
    <description>訪問日</description>
    <label>訪問日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>