workshop-real/examples/force-app/main/default/objects/StoreVisit__c/fields/Visitor__c.field-meta.xml
<CustomField>
    <fullName>Visitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>訪問した営業担当者</description>
    <label>訪問者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>StoreVisits</relationshipName>
    <type>Lookup</type>
</CustomField>